<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profil_mahasiswa" />
        <item
            android:id="@+id/nav_lokasi_makan"
            android:icon="@drawable/ic_maps"
            android:title="@string/tempat_makan_terdekat" />
        <item
            android:id="@+id/nav_lokasi_user"
            android:icon="@drawable/ic_baseline_my_location_24"
            android:title="@string/lokasi_pengguna" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/tentang_aplikasi" />
    </group>
</menu>