<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.erlanggaard.sensor_10121802.ui.home.HomeFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_lokasi_makan"
        android:name="com.erlanggaard.sensor_10121802.ui.gallery.GalleryFragment"
        android:label="@string/menu_lokasi_makanan"
        tools:layout="@layout/fragment_lokasi_makan" />

    <fragment
        android:id="@+id/nav_lokasi_user"
        android:name="com.erlanggaard.sensor_10121802.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_lokasi_user"
        tools:layout="@layout/fragment_lokasi_user" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.erlanggaard.sensor_10121802.ui.info.InfoFragment"
        android:label="Information"
        tools:layout="@layout/fragment_info" />
</navigation>